<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <ImageView
        android:id="@+id/fragment_info_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/fragment_info_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_toRightOf="@id/fragment_info_image"
        android:text="@string/app_name_version" />


    <Button
        android:id="@+id/info_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_info_app_name"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:background="@null"
        android:drawableLeft="@drawable/ic_star"
        android:padding="8dp"
        android:text="@string/info_rate"
        app:srcCompat="@drawable/ic_star" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_info_image"
        android:layout_marginTop="32dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_developer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_name"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_gmail" />

        <TextView
            android:id="@+id/fragment_info_gmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_email"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_github" />

        <TextView
            android:drawableRight="@drawable/ic_link"
            android:drawablePadding="8dp"
            android:id="@+id/fragment_info_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_github"
            android:textColor="@color/colorAccent" />

    </LinearLayout>


</RelativeLayout>