<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/number_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/enter_number_edit_text_hint"
                    android:maxLength="15"
                    android:singleLine="true"/>

                <ImageButton
                    android:id="@+id/delete_number_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="7"
                    android:background="@null"
                    app:srcCompat="@drawable/ic_clear_number"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/system_from_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:hint="@string/from_edit_text_hint"
                    android:inputType="number"
                    android:maxLength="2"/>

                <ImageButton
                    android:id="@+id/reverse_systems_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:background="@null"
                    app:srcCompat="@drawable/ic_change_system"/>

                <EditText
                    android:id="@+id/system_to_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:hint="@string/to_edit_text_hint"
                    android:inputType="number"
                    android:maxLength="2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageButton
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:id="@+id/how_it_happen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    app:srcCompat="@drawable/ic_how_it"
                    android:layout_weight="5"
                    android:background="@color/colorPrimaryDark"/>

                <TextView
                    android:id="@+id/result_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:hint="@string/result_text_view_hint"
                    android:padding="16dp"/>



                <ImageButton
                    android:id="@+id/image_button_clear_all"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="5"
                    android:background="@color/colorAccent"
                    app:srcCompat="@drawable/ic_clear_all"/>

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/in_other_system"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@color/colorAccent"
                    android:padding="8dp"
                    android:text="2"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/result_2_system"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:paddingLeft="8dp"
                    android:paddingTop="6dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@color/colorAccent"
                    android:padding="8dp"
                    android:text="8"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/result_8_system"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:paddingLeft="8dp"
                    android:paddingTop="6dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@color/colorAccent"
                    android:padding="8dp"
                    android:text="10"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/result_10_system"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:paddingLeft="8dp"
                    android:paddingTop="6dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@color/colorAccent"
                    android:padding="8dp"
                    android:text="16"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/result_16_system"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:paddingLeft="8dp"
                    android:paddingTop="6dp"/>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_convert_fab"/>

</android.support.design.widget.CoordinatorLayout>
